HW06: changes on review